--- a/css/style.css
+++ b/css/style.css
@@ -1718,3 +1718,17 @@ ul.simplefilter {
 	}
 }
 /*-- //responsive --*/
+
+
+
+/*-- Mugshots --*/
+.icon-silverbranch {
+	float: none;
+	width: 70px;
+	height: 70px;
+	text-align: center;
+	padding: 1.2em 0 0 0;
+	margin: 0 auto 1em;
+	background: url(../images/officers/silverbranch.png) no-repeat 0px 0px;
+	background-size: contain;
+}
